<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_general">
        <CheckBoxPreference
            android:defaultValue="@string/pref_auto_update_default"
            android:key="@string/pref_auto_update_key"
            android:summary="@string/pref_auto_update_summary"
            android:title="@string/pref_auto_update_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_about">
        <Preference android:title="@string/pref_web_page">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_web_page_url" />
        </Preference>
        <Preference android:title="@string/pref_legal">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_legal_url" />
        </Preference>
        <Preference
            android:key="@string/pref_version_key"
            android:title="@string/pref_version" />
    </PreferenceCategory>
</PreferenceScreen>